--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".AnimationActivity"></activity>
-
-        <activity android:name=".SecondActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AnimationActivity" />
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".RadioGroupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".KoltinActivity" />
+        <activity android:name=".ReflectActivity"></activity>
     </application>
 
 </manifest>
